--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Aravind Raj C K
-logo: /assets/images/headshot_circle.png
+logo: /assets/images/logo.png
 #description: text below image
 #show_downloads: true
 theme: jekyll-theme-minimal
